login.html,signup.html

--- a/staff-portal/src/assets/js/plugins/ckeditor/samples/old/autogrow/autogrow.html
+++ b/staff-portal/src/assets/js/plugins/ckeditor/samples/old/autogrow/autogrow.html
@@ -7,8 +7,8 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 <head>
 	<meta charset="utf-8">
 	<title>AutoGrow Plugin &mdash; CKEditor Sample</title>
-	<script src="../../../ckeditor.js"></script>
-	<link rel="stylesheet" href="../../../samples/old/sample.css">
+	<script src="../../ckeditor.js"></script>
+	<link rel="stylesheet" href="../../samples/old/sample.css">
 	<meta name="ckeditor-sample-name" content="AutoGrow plugin">
 	<meta name="ckeditor-sample-group" content="Plugins">
 	<meta name="ckeditor-sample-description" content="Using the AutoGrow plugin in order to make the editor grow to fit the size of its content.">
@@ -16,7 +16,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 </head>
 <body>
 	<h1 class="samples">
-		<a href="../../../samples/old/index.html">CKEditor Samples</a> &raquo; Using AutoGrow Plugin
+		<a href="../../samples/old/index.html">CKEditor Samples</a> &raquo; Using AutoGrow Plugin
 	</h1>
 	<div class="warning deprecated">
 		This sample is not maintained anymore. Check out its <a href="https://ckeditor.com/docs/ckeditor4/latest/examples/autogrow.html">brand new version in CKEditor Examples</a>.
@@ -55,7 +55,7 @@ CKEDITOR.replace( '<em>textarea_id</em>', {
 			be given in pixels.
 		</p>
 	</div>
-	<form action="../../../samples/sample_posteddata.php" method="post">
+	<form action="../../samples/sample_posteddata.php" method="post">
 		<p>
 			<label for="editor1">
 				CKEditor using the <code>autogrow</code> plugin with its default configuration:
