--- a/staff-portal/src/assets/js/plugins/ckeditor/samples/old/sharedspace/sharedspace.html
+++ b/staff-portal/src/assets/js/plugins/ckeditor/samples/old/sharedspace/sharedspace.html
@@ -7,8 +7,8 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 <head>
 	<meta charset="utf-8">
 	<title>Shared-Space Plugin &mdash; CKEditor Sample</title>
-	<script src="../../../ckeditor.js"></script>
-	<link rel="stylesheet" href="../../../samples/old/sample.css">
+	<script src="../../ckeditor.js"></script>
+	<link rel="stylesheet" href="../../samples/old/sample.css">
 	<meta name="ckeditor-sample-name" content="Shared-Space plugin">
 	<meta name="ckeditor-sample-group" content="Plugins">
 	<meta name="ckeditor-sample-description" content="Having the toolbar and the bottom bar spaces shared by different editor instances.">
@@ -16,7 +16,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 </head>
 <body>
 	<h1 class="samples">
-		<a href="../../../samples/old/index.html">CKEditor Samples</a> &raquo; Sharing Toolbar and Bottom-bar Spaces
+		<a href="../../samples/old/index.html">CKEditor Samples</a> &raquo; Sharing Toolbar and Bottom-bar Spaces
 	</h1>
 	<div class="warning deprecated">
 		This sample is not maintained anymore. Check out its <a href="https://ckeditor.com/docs/ckeditor4/latest/examples/sharedspace.html">brand new version in CKEditor Examples</a>.
