--- a/staff-portal/src/assets/js/plugins/ckeditor/samples/old/uicolor/uicolor.html
+++ b/staff-portal/src/assets/js/plugins/ckeditor/samples/old/uicolor/uicolor.html
@@ -7,8 +7,8 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 <head>
 	<meta charset="utf-8">
 	<title>UI Color Picker &mdash; CKEditor Sample</title>
-	<script src="../../../ckeditor.js"></script>
-	<link rel="stylesheet" href="../../../samples/old/sample.css">
+	<script src="../../ckeditor.js"></script>
+	<link rel="stylesheet" href="../../samples/old/sample.css">
 	<meta name="ckeditor-sample-name" content="UIColor plugin">
 	<meta name="ckeditor-sample-group" content="Plugins">
 	<meta name="ckeditor-sample-description" content="Using the UIColor plugin to pick up skin color.">
@@ -16,7 +16,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 </head>
 <body>
 	<h1 class="samples">
-		<a href="../../../samples/old/index.html">CKEditor Samples</a> &raquo; UI Color Plugin
+		<a href="../../samples/old/index.html">CKEditor Samples</a> &raquo; UI Color Plugin
 	</h1>
 	<div class="warning deprecated">
 		This sample is not maintained anymore. Check out its <a href="https://ckeditor.com/docs/ckeditor4/latest/examples/uicolorpicker.html">brand new version in CKEditor Examples</a>.
@@ -28,7 +28,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 			compatibility. The Moono and Kama skins are examples of skins that work with it.
 		</p>
 	</div>
-	<form action="../../../samples/sample_posteddata.php" method="post">
+	<form action="../../samples/sample_posteddata.php" method="post">
 	<div id="ui-color-plugin">
 		<p>
 			If the <strong>uicolor</strong> plugin along with the dedicated <strong>UIColor</strong>
