--- a/user/personal-profile/personal-profile.html
+++ b/user/personal-profile/personal-profile.html
@@ -21,7 +21,7 @@
     <script>
         $.get("login-check.php", function (data) {
             if (!data) {
-                location.href = '../login-demo.html';
+                location.href = '../login.html';
             }
         });
     </script>
