--- a/staff-portal/src/assets/js/plugins/ckeditor/samples/old/bbcode/bbcode.html
+++ b/staff-portal/src/assets/js/plugins/ckeditor/samples/old/bbcode/bbcode.html
@@ -7,9 +7,9 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 <head>
 	<meta charset="utf-8">
 	<title>BBCode Plugin &mdash; CKEditor Sample</title>
-	<script src="../../../ckeditor.js"></script>
-	<script src="../../../samples/old/sample.js"></script>
-	<link rel="stylesheet" href="../../../samples/old/sample.css">
+	<script src="../../ckeditor.js"></script>
+	<script src="../../samples/old/sample.js"></script>
+	<link rel="stylesheet" href="../../samples/old/sample.css">
 	<meta name="ckeditor-sample-required-plugins" content="sourcearea">
 	<meta name="ckeditor-sample-name" content="Output for BBCode">
 	<meta name="ckeditor-sample-group" content="Additional Plugins">
@@ -18,7 +18,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 </head>
 <body>
 	<h1 class="samples">
-		<a href="../../../samples/old/index.html">CKEditor Samples</a> &raquo; BBCode Plugin
+		<a href="../../samples/old/index.html">CKEditor Samples</a> &raquo; BBCode Plugin
 	</h1>
 	<div class="warning deprecated">
 		This sample is not maintained anymore. Check out its <a href="https://ckeditor.com/docs/ckeditor4/latest/examples/bbcode.html">brand new version in CKEditor Examples</a>.
@@ -53,7 +53,7 @@ CKEDITOR.replace( 'editor1', {
 	... <i>some other configurations omitted here</i>
 });	</pre>
 	</div>
-	<form action="../../../samples/sample_posteddata.php" method="post">
+	<form action="../../samples/sample_posteddata.php" method="post">
 		<p>
 			<label for="editor1">
 				Editor 1:
