--- a/staff-portal/src/assets/js/plugins/ckeditor/samples/old/codesnippet/codesnippet.html
+++ b/staff-portal/src/assets/js/plugins/ckeditor/samples/old/codesnippet/codesnippet.html
@@ -7,9 +7,9 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 <head>
 	<meta charset="utf-8">
 	<title>Code Snippet &mdash; CKEditor Sample</title>
-	<script src="../../../ckeditor.js"></script>
-	<link href="../../../samples/old/sample.css" rel="stylesheet">
-	<link href="../../../plugins/codesnippet/lib/highlight/styles/monokai_sublime.css" rel="stylesheet">
+	<script src="../../ckeditor.js"></script>
+	<link href="../../samples/old/sample.css" rel="stylesheet">
+	<link href="../../plugins/codesnippet/lib/highlight/styles/monokai_sublime.css" rel="stylesheet">
 	<meta name="ckeditor-sample-name" content="Code Snippet plugin">
 	<meta name="ckeditor-sample-group" content="Plugins">
 	<meta name="ckeditor-sample-description" content="View and modify code using the Code Snippet plugin.">
@@ -26,7 +26,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 </head>
 <body>
 	<h1 class="samples">
-		<a href="../../../samples/old/index.html">CKEditor Samples</a> &raquo; Code Snippet Plugin
+		<a href="../../samples/old/index.html">CKEditor Samples</a> &raquo; Code Snippet Plugin
 	</h1>
 	<div class="warning deprecated">
 		This sample is not maintained anymore. Check out its <a href="https://ckeditor.com/docs/ckeditor4/latest/examples/codesnippet.html">brand new version in CKEditor Examples</a>.
