--- a/staff-portal/src/assets/js/plugins/ckeditor/samples/old/devtools/devtools.html
+++ b/staff-portal/src/assets/js/plugins/ckeditor/samples/old/devtools/devtools.html
@@ -7,8 +7,8 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 <head>
 	<meta charset="utf-8">
 	<title>Using DevTools Plugin &mdash; CKEditor Sample</title>
-	<script src="../../../ckeditor.js"></script>
-	<link rel="stylesheet" href="../../../samples/old/sample.css">
+	<script src="../../ckeditor.js"></script>
+	<link rel="stylesheet" href="../../samples/old/sample.css">
 	<meta name="ckeditor-sample-name" content="Developer Tools plugin">
 	<meta name="ckeditor-sample-group" content="Plugins">
 	<meta name="ckeditor-sample-description" content="Using the Developer Tools plugin to display information about dialog window UI elements to allow for easier customization.">
@@ -16,7 +16,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 </head>
 <body>
 	<h1 class="samples">
-		<a href="../../../samples/old/index.html">CKEditor Samples</a> &raquo; Using the Developer Tools Plugin
+		<a href="../../samples/old/index.html">CKEditor Samples</a> &raquo; Using the Developer Tools Plugin
 	</h1>
 	<div class="warning deprecated">
 		This sample is not maintained anymore. Check out its <a href="https://ckeditor.com/docs/ckeditor4/latest/examples/devtools.html">brand new version in CKEditor Examples</a>.
@@ -49,7 +49,7 @@ CKEDITOR.replace( '<em>textarea_id</em>', {
 			the <code>&lt;textarea&gt;</code> element to be replaced with CKEditor.
 		</p>
 	</div>
-	<form action="../../../samples/sample_posteddata.php" method="post">
+	<form action="../../samples/sample_posteddata.php" method="post">
 		<p>
 			<label for="editor1">
 				Editor 1:
