--- a/staff-portal/src/assets/js/plugins/ckeditor/samples/old/easyimage/easyimage.html
+++ b/staff-portal/src/assets/js/plugins/ckeditor/samples/old/easyimage/easyimage.html
@@ -7,9 +7,9 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 <head>
 	<meta charset="utf-8">
 	<title>CKEditor Easy Image Sample</title>
-	<script src="../../../ckeditor.js"></script>
-	<link rel="stylesheet" href="../../../samples/css/samples.css">
-	<link rel="stylesheet" href="../../../samples/toolbarconfigurator/lib/codemirror/neo.css">
+	<script src="../../ckeditor.js"></script>
+	<link rel="stylesheet" href="../../samples/css/samples.css">
+	<link rel="stylesheet" href="../../samples/toolbarconfigurator/lib/codemirror/neo.css">
 	<meta name="description" content="Try the latest sample of CKEditor 4 and learn more about customizing your WYSIWYG editor with endless possibilities.">
 </head>
 <body id="main">
@@ -36,7 +36,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 <header class="header-a">
 	<div class="grid-container">
 		<h1 class="header-a-logo grid-width-30">
-			<img src="../../../samples/img/logo.svg" onerror="this.src='../../../samples/img/logo.png'; this.onerror=null;" alt="CKEditor Sample">
+			<img src="../../samples/img/logo.svg" onerror="this.src='../../samples/img/logo.png'; this.onerror=null;" alt="CKEditor Sample">
 		</h1>
 	</div>
 </header>
@@ -56,11 +56,11 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 				<div id="editor">
 					<h1>Apollo 11</h1>
 					<figure class="image easyimage">
-						<img alt="Saturn V carrying Apollo 11" src="../../../samples/img/logo.png">
+						<img alt="Saturn V carrying Apollo 11" src="../../samples/img/logo.png">
 					</figure>
 					<p><strong>Apollo 11</strong> was the spaceflight that landed the first humans, Americans <a href="http://en.wikipedia.org/wiki/Neil_Armstrong">Neil Armstrong</a> and <a href="http://en.wikipedia.org/wiki/Buzz_Aldrin">Buzz Aldrin</a>, on the Moon on July 20, 1969, at 20:18 UTC. Armstrong became the first to step onto the lunar surface 6 hours later on July 21 at 02:56 UTC.</p>
 					<figure class="easyimage easyimage-side">
-						<img alt="Saturn V carrying Apollo 11" src="../../image2/samples/assets/image1.jpg">
+						<img alt="Saturn V carrying Apollo 11" src="../image2/samples/assets/image1.jpg">
 						<figcaption>Saturn V carrying Apollo 11</figcaption>
 					</figure>
 					<p>Armstrong spent about <s>three and a half</s> two and a half hours outside the spacecraft, Aldrin slightly less; and together they collected 47.5 pounds (21.5&nbsp;kg) of lunar material for return to Earth. A third member of the mission, <a href="http://en.wikipedia.org/wiki/Michael_Collins_(astronaut)">Michael Collins</a>, piloted the <a href="http://en.wikipedia.org/wiki/Apollo_Command/Service_Module">command</a> spacecraft alone in lunar orbit until Armstrong and Aldrin returned to it for the trip back to Earth.</p>
