--- a/staff-portal/src/assets/js/plugins/ckeditor/samples/old/image2/image2.html
+++ b/staff-portal/src/assets/js/plugins/ckeditor/samples/old/image2/image2.html
@@ -7,12 +7,12 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 <head>
 	<meta charset="utf-8">
 	<title>New Image plugin &mdash; CKEditor Sample</title>
-	<script src="../../../ckeditor.js"></script>
+	<script src="../../ckeditor.js"></script>
 	<script>
 		if ( CKEDITOR.env.ie && CKEDITOR.env.version < 9 )
 			CKEDITOR.tools.enableHtml5Elements( document );
 	</script>
-	<link href="../../../samples/old/sample.css" rel="stylesheet">
+	<link href="../../samples/old/sample.css" rel="stylesheet">
 	<meta name="ckeditor-sample-name" content="New Image plugin">
 	<meta name="ckeditor-sample-group" content="Plugins">
 	<meta name="ckeditor-sample-description" content="Using the new Image plugin to insert captioned images and adjust their dimensions.">
@@ -21,7 +21,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 </head>
 <body>
 	<h1 class="samples">
-		<a href="../../../samples/old/index.html">CKEditor Samples</a> &raquo; New Image plugin
+		<a href="../../samples/old/index.html">CKEditor Samples</a> &raquo; New Image plugin
 	</h1>
 	<div class="warning deprecated">
 		This sample is not maintained anymore. Check out its <a href="https://ckeditor.com/docs/ckeditor4/latest/examples/image2.html">brand new version in CKEditor Examples</a>.
