--- a/staff-portal/src/assets/js/plugins/ckeditor/samples/old/inlineall.html
+++ b/staff-portal/src/assets/js/plugins/ckeditor/samples/old/inlineall.html
@@ -8,7 +8,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 	<meta charset="utf-8">
 	<title>Massive inline editing &mdash; CKEditor Sample</title>
 	<meta name="description" content="Try the latest sample of CKEditor 4 and learn more about customizing your WYSIWYG editor with endless possibilities.">
-	<script src="../../ckeditor.js"></script>
+	<script src="../ckeditor.js"></script>
 	<script>
 
 		// This code is generally not necessary, but it is here to demonstrate
