--- a/staff-portal/src/assets/js/plugins/ckeditor/samples/old/inlinetextarea.html
+++ b/staff-portal/src/assets/js/plugins/ckeditor/samples/old/inlinetextarea.html
@@ -7,7 +7,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 <head>
 	<meta charset="utf-8">
 	<title>Replace Textarea with Inline Editor &mdash; CKEditor Sample</title>
-	<script src="../../ckeditor.js"></script>
+	<script src="../ckeditor.js"></script>
 	<link href="sample.css" rel="stylesheet">
 	<meta name="description" content="Try the latest sample of CKEditor 4 and learn more about customizing your WYSIWYG editor with endless possibilities.">
 	<style>
