--- a/staff-portal/src/assets/js/plugins/ckeditor/samples/old/jquery.html
+++ b/staff-portal/src/assets/js/plugins/ckeditor/samples/old/jquery.html
@@ -8,8 +8,8 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 	<meta charset="utf-8">
 	<title>jQuery Adapter &mdash; CKEditor Sample</title>
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-	<script src="../../ckeditor.js"></script>
-	<script src="../../adapters/jquery.js"></script>
+	<script src="../ckeditor.js"></script>
+	<script src="../adapters/jquery.js"></script>
 	<link href="sample.css" rel="stylesheet">
 	<meta name="description" content="Try the latest sample of CKEditor 4 and learn more about customizing your WYSIWYG editor with endless possibilities.">
 	<style>
@@ -52,7 +52,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 
 <pre class="samples">
 &lt;script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"&gt;&lt;/script&gt;
-&lt;script src="/ckedit../../ckeditor.js"&gt;&lt;/script&gt;
+&lt;script src="/ckedit../ckeditor.js"&gt;&lt;/script&gt;
 &lt;script src="/ckeditor/adapters/jquery.js"&gt;&lt;/script&gt;
 </pre>
 
