--- a/staff-portal/src/assets/js/plugins/ckeditor/samples/old/mathjax/mathjax.html
+++ b/staff-portal/src/assets/js/plugins/ckeditor/samples/old/mathjax/mathjax.html
@@ -7,8 +7,8 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 <head>
 	<meta charset="utf-8">
 	<title>Mathematical Formulas &mdash; CKEditor Sample</title>
-	<script src="../../../ckeditor.js"></script>
-	<link href="../../../samples/old/sample.css" rel="stylesheet">
+	<script src="../../ckeditor.js"></script>
+	<link href="../../samples/old/sample.css" rel="stylesheet">
 	<meta name="ckeditor-sample-name" content="Mathematics plugin">
 	<meta name="ckeditor-sample-group" content="Plugins">
 	<meta name="ckeditor-sample-description" content="Create mathematical equations in TeX and display them in visual form.">
@@ -20,7 +20,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 </head>
 <body>
 	<h1 class="samples">
-		<a href="../../../samples/old/index.html">CKEditor Samples</a> &raquo; Mathematical Formulas
+		<a href="../../samples/old/index.html">CKEditor Samples</a> &raquo; Mathematical Formulas
 	</h1>
 	<div class="warning deprecated">
 		This sample is not maintained anymore. Check out its <a href="https://ckeditor.com/docs/ckeditor4/latest/examples/mathjax.html">brand new version in CKEditor Examples</a>.
