--- a/staff-portal/src/assets/js/plugins/ckeditor/samples/old/mentions/mentions.html
+++ b/staff-portal/src/assets/js/plugins/ckeditor/samples/old/mentions/mentions.html
@@ -7,8 +7,8 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 <head>
 	<meta charset="utf-8">
 	<title>Mentions &mdash; CKEditor Sample</title>
-	<script src="../../../ckeditor.js"></script>
-	<link rel="stylesheet" href="../../../samples/css/samples.css">
+	<script src="../../ckeditor.js"></script>
+	<link rel="stylesheet" href="../../samples/css/samples.css">
 	<meta name="description" content="Try the latest sample of CKEditor 4 and learn more about customizing your WYSIWYG editor with endless possibilities.">
 </head>
 <body>
@@ -35,7 +35,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 <header class="header-a">
 	<div class="grid-container">
 		<h1 class="header-a-logo grid-width-30">
-			<img src="../../../samples/img/logo.svg" onerror="this.src='../../../samples/img/logo.png'; this.onerror=null;" alt="CKEditor Sample">
+			<img src="../../samples/img/logo.svg" onerror="this.src='../../samples/img/logo.png'; this.onerror=null;" alt="CKEditor Sample">
 		</h1>
 	</div>
 </header>
