--- a/staff-portal/src/assets/js/plugins/ckeditor/samples/old/placeholder/placeholder.html
+++ b/staff-portal/src/assets/js/plugins/ckeditor/samples/old/placeholder/placeholder.html
@@ -7,9 +7,9 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 <head>
 	<meta charset="utf-8">
 	<title>Placeholder Plugin &mdash; CKEditor Sample</title>
-	<script src="../../../ckeditor.js"></script>
-	<script src="../../../samples/old/sample.js"></script>
-	<link rel="stylesheet" href="../../../samples/old/sample.css">
+	<script src="../../ckeditor.js"></script>
+	<script src="../../samples/old/sample.js"></script>
+	<link rel="stylesheet" href="../../samples/old/sample.css">
 	<meta name="ckeditor-sample-name" content="Placeholder plugin">
 	<meta name="ckeditor-sample-group" content="Plugins">
 	<meta name="ckeditor-sample-description" content="Using the Placeholder plugin to create uneditable sections that can only be created and modified with a proper dialog window.">
@@ -17,7 +17,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 </head>
 <body>
 	<h1 class="samples">
-		<a href="../../../samples/old/index.html">CKEditor Samples</a> &raquo; Using the Placeholder Plugin
+		<a href="../../samples/old/index.html">CKEditor Samples</a> &raquo; Using the Placeholder Plugin
 	</h1>
 	<div class="warning deprecated">
 		This sample is not maintained anymore. Check out its <a href="https://ckeditor.com/docs/ckeditor4/latest/examples/placeholder.html">brand new version in CKEditor Examples</a>.
@@ -44,7 +44,7 @@ CKEDITOR.replace( '<em>textarea_id</em>', {
 			the <code>&lt;textarea&gt;</code> element to be replaced with CKEditor.
 		</p>
 	</div>
-	<form action="../../../samples/sample_posteddata.php" method="post">
+	<form action="../../samples/sample_posteddata.php" method="post">
 		<p>
 			<label for="editor1">
 				CKEditor using the <code>placeholder</code> plugin with its default configuration:
