--- a/staff-portal/src/assets/js/plugins/ckeditor/samples/old/sourcedialog/sourcedialog.html
+++ b/staff-portal/src/assets/js/plugins/ckeditor/samples/old/sourcedialog/sourcedialog.html
@@ -7,8 +7,8 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 <head>
 	<meta charset="utf-8">
 	<title>Editing source code in a dialog &mdash; CKEditor Sample</title>
-	<script src="../../../ckeditor.js"></script>
-	<link rel="stylesheet" href="../../../samples/old/sample.css">
+	<script src="../../ckeditor.js"></script>
+	<link rel="stylesheet" href="../../samples/old/sample.css">
 	<meta name="ckeditor-sample-name" content="Editing source code in a dialog">
 	<meta name="ckeditor-sample-group" content="Plugins">
 	<meta name="ckeditor-sample-description" content="Editing HTML content of both inline and classic editor instances.">
@@ -26,7 +26,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 </head>
 <body>
 	<h1 class="samples">
-		<a href="../../../samples/old/index.html">CKEditor Samples</a> &raquo; Editing source code in a dialog
+		<a href="../../samples/old/index.html">CKEditor Samples</a> &raquo; Editing source code in a dialog
 	</h1>
 	<div class="warning deprecated">
 		This sample is not maintained anymore. Check out its <a href="https://ckeditor.com/docs/ckeditor4/latest/examples/sourcearea.html">brand new version in CKEditor Examples</a>.
