--- a/staff-portal/src/assets/js/plugins/ckeditor/samples/old/xhtmlstyle.html
+++ b/staff-portal/src/assets/js/plugins/ckeditor/samples/old/xhtmlstyle.html
@@ -8,7 +8,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 	<meta charset="utf-8">
 	<title>XHTML Compliant Output &mdash; CKEditor Sample</title>
 	<meta name="ckeditor-sample-required-plugins" content="sourcearea">
-	<script src="../../ckeditor.js"></script>
+	<script src="../ckeditor.js"></script>
 	<script src="sample.js"></script>
 	<link href="sample.css" rel="stylesheet">
 	<meta name="description" content="Try the latest sample of CKEditor 4 and learn more about customizing your WYSIWYG editor with endless possibilities.">
