fix: fix an error on the categories

--- a/index.html
+++ b/index.html
@@ -31,22 +31,52 @@
                         </div>
                     </div>
                     <div class="col-lg-7 position-static">
-                        <div class="site-main-nav" >
+                        <div class="site-main-nav">
                             <nav class="site-nav">
                                 <ul>
                                     <li><a href="index.html">Home</a></li>
                                     <li>
-                                        <a href="#">Shop</a>
+                                        <a href="#">Shop <span class="new">New</span></a>
 
                                         <ul class="mega-sub-menu">
-                                            <li><a href="shop-grid-Spring.html">Spring</a></li>
-                                            <li><a href="shop-grid-Summer.html">Summer</a></li>
-                                            <li><a href="shop-grid-Autumn.html">Autumn</a></li>
-                                            <li><a href="shop-grid-Winter.html">Winter</a></li>
-                                            <li><a href="shop-grid-Plants.html">Plants</a></li>
-                                            <li><a href="shop-grid-Birthday.html">Birthday</a></li>
-                                            <li><a href="shop-grid-Wedding.html">Wedding</a></li>
-                                            <li><a href="shop-grid-Sale.html">Sale</a></li>
+                                            <li class="mega-dropdown">
+                                                <a class="mega-title">FLOWERS BY COLOUR</a>
+
+                                                <ul class="mega-item">
+                                                    <li><a href="Pink.html">Pink</a></li>
+                                                    <li><a href="White.html">White</a></li>
+                                                    <li><a href="Blue.html">Blue</a></li>
+                                                    <li><a href="Orange.html">Orange</a></li>
+                                                    <li><a href="Red.html">Red</a></li>
+                                                    <li><a href="Yellow.html">Yellow</a></li>
+                                                </ul>
+                                            </li>
+                                            <li class="mega-dropdown">
+                                                <a class="mega-title">FLOWER VARIETIES</a>
+
+                                                <ul class="mega-item">
+                                                    <li><a href="Roses.html">Roses</a></li>
+                                                    <li><a href="Lilies.html">Lilies</a></li>
+                                                    <li><a href="Gerbera.html">Gerbera</a></li>
+                                                    <li><a href="Carnations.html">Carnations</a></li>
+                                                </ul>
+                                            </li>
+                                            <li class="mega-dropdown">
+                                                <a class="mega-title">FUNERAL FLOWERS</a>
+
+                                                <ul class="mega-item">
+                                                    <li><a href="Bestsellers.html">Bestsellers</a></li>
+                                                    <li><a href="Sheaves.html">Sheaves</a></li>
+                                                    <li><a href="Wreaths.html">Wreaths</a></li>
+                                                    <li><a href="Arrangements.html">Arrangements</a></li>
+                                                </ul>
+                                            </li>
+                                            <li class="mega-dropdown">
+                                                <a class="mega-title">DEAL OF THE WEEK</a>
+                                                <a class="menu-banner">
+                                                    <img src="assets/images/menu-banner.jpg" alt="">
+                                                </a>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li>
@@ -54,29 +84,27 @@
 
                                         <ul class="sub-menu">
                                             <li>
-                                                <a href="#">Blog 1</a>
+                                                <a href="#">Blog</a>
                                                 <ul class="sub-menu">
-                                                    <li><a href="blog1.html">Blog 1-1</a></li>
-                                                    <li><a href="blog1-1.html">Blog1-2</a></li>
-                                                    <li><a href="blog1-2.html">Blog1-3</a></li>
+                                                    <li><a href="blog.html">Blog</a></li>
+                                                    <li><a href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
+                                                    <li><a href="blog-right-sidebar.html">Blog Right Sidebar</a></li>
                                                 </ul>
                                             </li>
                                             <li>
-                                                <a href="#">Blog 2</a>
+                                                <a href="#">Blog Single</a>
                                                 <ul class="sub-menu">
-                                                    <li><a href="blog2-1.html">Blog2-1</a></li>
-                                                    <li><a href="blog2-2.html">Blog2-2</a></li>
+                                                    <li><a href="blog-single-left-sidebar.html">Blog Single Left Sidebar</a></li>
+                                                    <li><a href="blog-single-right-sidebar.html">Blog Single Right Sidebar</a></li>
                                                 </ul>
                                             </li>
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="#">Pages</a>
+                                        <a href="#">About Us</a>
                                         <ul class="sub-menu">
-                                            <li><a href="about.html">About Us</a></li>
-                                            <li><a href="cart.html">Cart</a></li>
-                                            <li><a href="wishlist.html">Wishlist</a></li>
-                                            <li><a href="checkout.html">Checkout</a></li>
+                                            <li><a href="about.html">Our Company</a></li>
+                                            <li><a href="Employee.html">Employee Style</a></li>
 
                                         </ul>
                                     </li>
@@ -87,10 +115,10 @@
                     </div>
                     <div class="col-lg-3">
                         <div class="header-meta-info">
-                            <div class="header-search search-form">
+                            <div class="header-search">
                                 <form action="#">
                                     <input type="text" placeholder="Search our store ">
-                                    <button><i class="icon-search" style="color: deeppink"></i></button>
+                                    <button><i class="icon-search"></i></button>
                                 </form>
                             </div>
                             <div class="header-account">
@@ -99,8 +127,10 @@
 
                                     <ul class="dropdown-menu ">
                                         <li><a href="#">Delivery</a></li>
-                                        <li><a href="#">Settings</a></li>
-                                        <li><a href="#">Logout</a></li>
+                                        <li><a href="#">Legal Notice</a></li>
+                                        <li><a href="#">Secure payment</a></li>
+                                        <li><a href="#">Sitemap</a></li>
+                                        <li><a href="#">About us</a></li>
                                     </ul>
                                 </div>
                                 <div class="header-account-list dropdown mini-cart">
@@ -356,8 +386,6 @@
     <!--Slider End-->
 
 
-
-
     <!--New Product Start-->
     <div class="features-product-area section-padding-5">
         <div class="container">
@@ -373,8 +401,10 @@
                 </div>
             </div>
             <div class="product-wrapper">
+
+
                 <div class="tab-content product-items-tab">
-                    <div class="tab-pane fade show active" id="tab1" role="tabpanel">
+                    <div class="tab-pane fade show active"  role="tabpanel">
                         <div class="swiper-container product-active">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
@@ -469,6 +499,10 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Add Arrows -->
+                            <div class="swiper-next"><i class="fa fa-angle-right"></i></div>
+                            <div class="swiper-prev"><i class="fa fa-angle-left"></i></div>
                         </div>
                     </div>
                 </div>
@@ -476,6 +510,8 @@
         </div>
     </div>
     <!--New Product End-->
+
+
 
     <!--Blog Start-->
     <div class="blog-area blog-bg section-padding-5">
