feature: add header functions

--- a/loggedin-index.html
+++ b/loggedin-index.html
@@ -123,12 +123,16 @@
                             </div>
                             <div class="header-account">
                                 <div class="header-account-list dropdown top-link">
-                                    <a role="button" data-toggle="dropdown"><i class="icon-user"></i></a>
+                                    <a role="button" data-toggle="dropdown"><i class="icon-user2"></i></a>
                                     <ul class="dropdown-menu ">
-                                        <li><a href="Signup.html">Sign Up</a></li>
-                                        <li><a href="Login.html">Login</a></li>
-                                        <li><a href="Reset.html">Forgot Password?</a> </li>
+                                        <li><a href="Signup.html">Profile Settings</a></li>
+                                        <li><a href="index.html">Log Out</a></li>
                                     </ul>
+                                </div>
+                                <div class="header-account-list mini-cart">
+                                    <a href="cart.html" role="button">
+                                        <i class="icon-shopping-bag"></i>
+                                    </a>
                                 </div>
                             </div>
                         </div>
