footer, header 封装

--- a/user/signup.html
+++ b/user/signup.html
@@ -28,14 +28,14 @@
                 <div class="row align-items-center">
                     <div class="col-lg-2">
                         <div class="header-logo">
-                            <a href="../index.html"><img src="../kugu-asset/images/logo/logo.png" alt=""></a>
+                            <a href="../index.php"><img src="../kugu-asset/images/logo/logo.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-lg-7 position-static">
                         <div class="site-main-nav">
                             <nav class="site-nav">
                                 <ul>
-                                    <li><a href="../index.html">Home</a></li>
+                                    <li><a href="../index.php">Home</a></li>
                                     <li>
                                         <a href="#">Shop <span class="new">New</span></a>
 
@@ -245,7 +245,7 @@
             <div class="row align-items-center">
                 <div class="col-6">
                     <div class="header-logo">
-                        <a href="../index.html"><img src="../kugu-asset/images/logo/logo.png" alt=""></a>
+                        <a href="../index.php"><img src="../kugu-asset/images/logo/logo.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-6">
@@ -446,7 +446,7 @@
                 success: function (data, status) {
                     if (data == 100) {
                         alert("注册成功")
-                        location.href = "../index.html";
+                        location.href = "../index.php";
                     } else if (data == 200) {
                         alert("用户名重复")
                     } else if (data == 300) {
