--- a/user/login.html
+++ b/user/login.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="../kugu-asset/css/plugins-min/plugins.min.css">
     <link rel="stylesheet" href="../kugu-asset/css/style.min.css">
     <link rel="stylesheet" href="../style/login-signup.css">
+    <link href="../plugins/tanchuang/css/xtiper.css" type="text/css" rel="stylesheet"/>
+    <script src="../plugins/tanchuang/js/xtiper.min.js" type="text/javascript"></script>
     <script src="../js/jquery-3.5.1.js"></script>
     <script src="../js/jquery.form.js"></script>
 
@@ -388,10 +390,15 @@
             url: 'login.php',
             success: function (data, status) {
                 if (data == 100) {
-                    alert("登录成功")
-                    location.href = '../index.php';
+                    // alert("登录成功")
+                    xtip.msg('Login Successfully!')
+                    setTimeout(function () {
+                        //内容3秒后执行
+                        location.href = '../index.php';
+                    }, 2000);
                 } else if (data == 200) {
-                    alert("用户名或密码错误")
+                    // alert("用户名或密码错误")
+                    xtip.alert('Wrong Username or Password','e');
                 }
                 // alert(status);
             }
