--- a/user/signup.html
+++ b/user/signup.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="../kugu-asset/css/plugins-min/plugins.min.css">
     <link rel="stylesheet" href="../kugu-asset/css/style.min.css">
     <link rel="stylesheet" href="../style/login-signup.css">
+    <link href="../plugins/tanchuang/css/xtiper.css" type="text/css" rel="stylesheet"/>
+    <script src="../plugins/tanchuang/js/xtiper.min.js" type="text/javascript"></script>
     <script src="../js/jquery-3.5.1.js"></script>
     <script src="../js/jquery.form.js"></script>
 </head>
@@ -287,10 +289,10 @@
             <h1 class="h1"><strong>SIGN UP</strong></h1>
             <p class="p"><strong>Already have a account? </strong><a href="login.html">Login in</a></p>
             <input type="text" class="input" name="username" placeholder="Username"><br>
-            <input type="text" id="p1" class="input" name="password" placeholder="Password"><br>
-            <input type="text" id="p2" class="input" placeholder="Confirm Password"><br>
+            <input type="password" id="p1" class="input" name="password" placeholder="Password"><br>
+            <input type="password" id="p2" class="input" placeholder="Confirm Password"><br>
             <!--            <input type="text" class="input" placeholder="Telephone Number"><br>-->
-            <input type="submit" class="submit" name="submit" value="Sign up"><br>
+            <input type="submit" class="submit" name="submit" onclick="" value="Sign up"><br>
             <a class="a1" href="reset.html">Forgot your username or password?</a>
             <p>By clicking, I confirm that I have read and agree to <br>the Flowershop <a href="">Terms of Service,
                 Privacy Policy.</a></p>
@@ -382,23 +384,30 @@
 <script src="../assets/js/main.js"></script>
 
 <script>
-    $(':submit').click(function () {
+    $(':submit').on('click', function (event) {
         if ($("#p1").val() === $("#p2").val()) {
             $('#form1').ajaxForm({
                 url: 'signup.php',
                 success: function (data, status) {
-                    if (data == 100) {
-                        alert("注册成功")
-                        location.href = "../index.php";
-                    } else if (data == 200) {
-                        alert("用户名重复")
-                    } else if (data == 300) {
-                        alert("注册失败")
+                    if (data === 100) {
+                        // alert("注册成功")
+                        xtip.msg('Sign Up Successfully!');
+                        setTimeout(function () {
+                            //内容3秒后执行
+                            location.href = '../index.php';
+                        }, 2000);
+                    } else if (data === 200) {
+                        // alert("用户名重复")
+                        xtip.alert('Username Already Exist', 'e');
+                    } else if (data === 300) {
+                        // alert("注册失败")
+                        xtip.alert('Sign Up Failed', 'e');
                     }
                 }
             });
         } else {
             alert("The two passwords you entered did not match");
+            return false;
         }
     });
 </script>
