--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                             <li><a href="about.html">About Us</a></li>
                             <li><a href="cart.html">Cart</a></li>
                             <li><a href="wishlist.html">Wishlist</a></li>
-                            <li><a href="checkout.html">Checkout</a></li>
+                            <li><a href="checkout.php">Checkout</a></li>
                         </ul>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
