--- a/shop-single.html
+++ b/shop-single.html
@@ -114,7 +114,7 @@
                                                     <li><a href="cart.html">Cart</a></li>
                                                     <li><a href="wishlist.html">Wishlist</a></li>
                                                     <li><a href="compare.html">Compare</a></li>
-                                                    <li><a href="checkout.html">Checkout</a></li>
+                                                    <li><a href="checkout.php">Checkout</a></li>
                                                     <li><a href="empty-cart.html">Empty Cart</a></li>
                                                     <li><a href="my-account.html">My Account</a></li>
                                                 </ul>
@@ -156,7 +156,7 @@
                                             <li><a href="cart.html">Cart</a></li>
                                             <li><a href="wishlist.html">Wishlist</a></li>
                                             <li><a href="compare.html">Compare</a></li>
-                                            <li><a href="checkout.html">Checkout</a></li>
+                                            <li><a href="checkout.php">Checkout</a></li>
                                             <li><a href="empty-cart.html">Empty Cart</a></li>
                                             <li><a href="my-account.html">My Account</a></li>
                                             <li><a href="login.html">Login</a></li>
@@ -251,7 +251,7 @@
                                             </ul>
                                         </li>
                                         <li class="product-btn">
-                                            <a href="checkout.html" class="btn btn-dark btn-block">Checkout</a>
+                                            <a href="checkout.php" class="btn btn-dark btn-block">Checkout</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -364,7 +364,7 @@
                                     <li><a href="cart.html">Cart</a></li>
                                     <li><a href="wishlist.html">Wishlist</a></li>
                                     <li><a href="compare.html">Compare</a></li>
-                                    <li><a href="checkout.html">Checkout</a></li>
+                                    <li><a href="checkout.php">Checkout</a></li>
                                     <li><a href="empty-cart.html">Empty Cart</a></li>
                                     <li><a href="my-account.html">My Account</a></li>
                                 </ul>
@@ -404,7 +404,7 @@
                             <li><a href="cart.html">Cart</a></li>
                             <li><a href="wishlist.html">Wishlist</a></li>
                             <li><a href="compare.html">Compare</a></li>
-                            <li><a href="checkout.html">Checkout</a></li>
+                            <li><a href="checkout.php">Checkout</a></li>
                             <li><a href="empty-cart.html">Empty Cart</a></li>
                             <li><a href="my-account.html">My Account</a></li>
                             <li><a href="login.html">Login</a></li>
