--- a/user/login.html
+++ b/user/login.html
@@ -171,6 +171,7 @@
                                 <li><a href="#">Register</a></li>
                                 <li><a href="#">My Account</a></li>
                                 <li><a href="#">Log Out</a></li>
+                                <div id="I love U"></div>
                             </ul>
                         </div>
                         <div class="header-account-list mini-cart">
