--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                         <a href="#">About Us</a>
                                         <ul class="sub-menu">
                                             <li><a href="about.html">Our Company</a></li>
-                                            <li><a href="Employee.html">Employee Style</a></li>
+                                            <li><a href="EmployeeStyle.html">Employee Style</a></li>
 
                                         </ul>
                                     </li>
@@ -871,8 +871,8 @@
                     <!--Footer Widget Start-->
                     <div class="col-lg-4 col-md-6">
                         <div class="footer-widget">
-                            <a class="footer-logo" href="#"><img src="assets/images/logo/logo2.png" alt=""></a>
-                            <div class="footer-widget-text">
+                            <a class="footer-logo" href="#"><img src="assets/images/logo/logo.png" alt=""></a>
+                            <div class="footer-widget-text text-center">
                                 <p>Group 9: Programmers Never Give Up</p>
                             </div>
                         </div>
