--- a/trading/shop-single.html
+++ b/trading/shop-single.html
@@ -171,7 +171,7 @@
                                             class="icon-users"></i></a>
                                 </div>
                                 <div class="header-account-list mini-cart">
-                                    <a href="#" role="button">
+                                    <a href="/trading/cart.html" role="button">
                                         <i class="icon-shopping-bag"></i>
                                     </a>
                                 </div>
@@ -209,7 +209,7 @@
                                 </ul>
                             </div>
                             <div class="header-account-list mini-cart">
-                                <a href="#">
+                                <a href="/trading/cart.html">
                                     <i class="icon-shopping-cart"></i>
                                     <span class="item-count ">0</span>
                                 </a>
